--- a/deploy/.env
+++ b/deploy/.env
@@ -1,5 +1,5 @@
 # Authentication for downloadable NIMs
-NGC_API_KEY=${NGC_API_KEY}
+NGC_API_KEY=${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}
 
 # Path where models will be stored and cached for NIM's
 # NOTE: This should be an absolute path and not relative path
